# intercept-analysis

./: .gitignore  compose.yml
auth-service/: Dockerfile  app.py  requirements.txt
nginx-service/: nginx.conf
pocketbase-service/: Dockerfile
pocketbase-service/pb_migrations/: 1746816292_created_url.js  1746816457_created_intercepted_requests.js  1746819226_updated_url.js
upload-service/: Cargo.toml  Dockerfile
upload-service/src/: main copy.rs  main.rs  models.rs  parser.rs  pocketbase.rs
