[package]
name = "upload-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mime = "0.3"
base64 = "0.22.1"
sha2 = "0.10.9"
url = "2.5.4"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }
json = "0.12.4"
